<resources>
    <string name="app_name">MobileLabs</string>
    <string name="info">Ільницький Владислав\nГрупа ІО-83\nІО-8312</string>
    <string name="playground">Playground</string>
    <string name="switch_title">switch</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="todo">TODO</string>
    <string name="imdbid">imdbID</string>
    <string name="type">type</string>
    <string name="search">search</string>
    <string name="add">Add</string>
    <string name="no_result_s_found">No result(s) found</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>